<resources>
    <string name="app_name">SkipTheLibrary</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emailaddress">Email</string>
    <string name="resister">Register</string>
    <string name="phonenumber">Phone Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="ratingheader">Select a rating for . . .</string>
    <string name="username_tag">\@username</string>
    <string name="rate">rate</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="mybooks">My Books</string>
    <string name="borrow">Borrow</string>
    <string name="heading">Heading</string>
    <string name="notifications">Notifications</string>
    <string name="author">by Author</string>
    <string name="rating">Rating</string>
    <string name="details">Details</string>
    <string name="requests">Requests</string>
    <string name="accept">accept</string>
    <string name="deny">deny</string>
    <string name="borrowed">borrowed</string>
    <string name="accepted">accepted</string>
    <string name="requested">requested</string>
    <string name="borrowing">Borrowing</string>
    <string name="title">Title</string>
    <string name="status">status</string>
    <string name="available">available</string>
    <string name="lent">lent</string>
    <string name="logout">logout</string>
    <string name="myprofile">My Profile</string>
    <string name="scaninfo">scan info</string>
    <string name="isbn">ISBN</string>
    <string name="description">Description</string>
    <string name="save_button">Save Button</string>
    <string name="img_carousel">Image Carousel</string>
    <string name="name">User\'s Name</string>
    <string name="ownerRating">Owner Rating</string>
    <string name="borrowerRating">Borrower Rating</string>
    <string name="contactInfo">Contact Information</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidHltb29yZSIsImEiOiJjanNxbDVsNGIxOTk3NGFwOXpkY3gwczFqIn0.V5q6lH_Wy9kmkepqc17m_A</string>
    <string name="profilePhoto">Profile Photo</string>
    <string name="upload">upload</string>
    <string name="addImage">Add Image</string>
    <string name="snack_bar_text">Book Deleted</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="scan_now">Scan now</string>
    <string name="requestbutton">Request</string>
    <string name="approve_button_msg">Approve</string>
    <string name="deny_button_msg">Deny</string>
    <string name="return_button">Return</string>
    <string name="lend_button">lend</string>
    <string name="returned_button">returned</string>
    <string name="noImageText">This book has no images</string>
    <string name="password_prompt">Please enter your password to update profile</string>
    <string name="owned_by_username">Owned by: </string>
    <string name="goodreads_api_key">rLCWLYxCEDQEmnJywZrwVA</string>
    <string name="pickupLocation">Pick-up Location</string>
    <string name="pending_book">Pending on another user\'s action</string>
    <string name="selectLocation">Select Location</string>
    <string name="submitLocation">Submit Location</string>
    <string name="handoffLocation">Handoff Location</string>
    <string name="viewHandoffLocation">View Handoff Location</string>
</resources>
