<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableRight="@drawable/ic_chevron_right_white_24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/Author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/author"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/magenta"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/status" />
    </LinearLayout>
</LinearLayout>