<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/requestor_list_parent_view">


    <TextView
        android:id="@+id/requestor_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/highlight"
        android:layout_marginHorizontal="16dp"
        android:text="@string/username"/>

    <Button
        android:id="@+id/approve_button_id"
        android:layout_width="80dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deny_button_id"
        android:fontFamily="@font/poppins_semibold"
        android:backgroundTint="@color/AVAILABLE"
        android:textSize="10dp"
        android:text="@string/approve_button_msg"
        />
    <Button
        android:id="@+id/deny_button_id"
        android:layout_width="80dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/declined_red"
        android:textSize="10dp"
        android:text="@string/deny_button_msg"
        android:layout_marginEnd="16dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
