<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_gradient">

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/emailaddress"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeading"
        android:autofillHints="true"/>

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailEditText"
        android:autofillHints="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignInButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/light_grey"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signin"
        android:textSize="14sp"
        app:backgroundTint="@color/light_grey"
        app:cornerRadius="40dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SignUpButton"
        app:layout_constraintEnd_toStartOf="@+id/SignUpButton"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="signInOnClick"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/SignUpButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@color/medium_grey"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup"
        android:textSize="14sp"
        app:backgroundTint="@color/medium_grey"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SignInButton"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText"
        android:onClick="signUpOnClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>