<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ProfilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:clickable="true"
        app:backgroundTint="@color/light_grey"
        app:srcCompat="@drawable/ic_person_white_24dp" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/username_tag" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/AcceptButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@android:color/holo_green_dark"
        android:text="@string/accept"
        app:backgroundTint="@android:color/holo_green_dark"
        app:cornerRadius="40dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/DenyButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/declined_red"
        android:backgroundTint="@color/declined_red"
        android:text="@string/deny"
        app:cornerRadius="40dp" />
</LinearLayout>
